--- a/jc/MuSu_(NA, c, NA).rmd
+++ b/jc/MuSu_(NA, c, NA).rmd
@@ -45,7 +45,7 @@ CommName[,'Community'] <- c("UnAssign", "Default","lateral Visual","Frontopariet
                             "ventral Attention","Salience","Cingular opercular",
                             "Sensorimotor - hand","Sensorimotor - face","Auditory",
                             "anterior Medial temporal","posterior Medial temporal",
-                            "Parietal memory","Context","Sensorimotor - foot","Unknown")
+                            "Parietal memory","Context","Sensorimotor - foot","Unknown","Unknown","Unknown","UnKnown","UnKnown")
 pander::pander(CommName[,c("Comm", "Community","CommLabel.short")])
 
 ```
@@ -64,7 +64,7 @@ names(parcel.list) <- c("sub01","sub08")
 labelcol <- list(sub01 = parcel.list$sub01$Comm.col$gc[order(rownames(parcel.list$sub01$Comm.col$gc))],
                  sub08 = parcel.list$sub08$Comm.col$gc[order(rownames(parcel.list$sub08$Comm.col$gc))])
 textcol <- list(sub01 = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)),
-                sub08 = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",3),rep("white",2)))
+                sub08 = c(rep("black",8),rep("white",2),rep("black",3),"white",rep("black",1),rep("white",3)))
 ```
 
 As a result, the correlation matrix of each session of each subject will look like this:
@@ -234,12 +234,19 @@ ciplot_all <- createFactorMap(c_edge,
 ciplot_imp <- createFactorMap(c_edge[importantEdg,],
                               axis1 = 1, axis2 = 2,
                               col.points = col4ImportantEdg[importantEdg],
+                              col.labels = col4ImportantEdg[importantEdg],
                               text.cex = 2,
                               force = 0.5,
                               title = "Significant contribution")
-cjplot01 <- cjplot$zeMap
-ciplot01 <- ciplot_all$zeMap_background + ciplot_all$zeMap_dots
-ciplot02 <- ciplot_imp$zeMap_background + ciplot_imp$zeMap_dots + ciplot_imp$zeMap_text
+
+f.labels <- createxyLabels.gen(x_axis = 1, y_axis = 2,
+                               lambda = svd.res$ExPosition.Data$eigs,
+                               tau = svd.res$ExPosition.Data$t,
+                               axisName = "Dimension ")
+
+cjplot01 <- cjplot$zeMap + f.labels
+ciplot01 <- ciplot_all$zeMap_background + ciplot_all$zeMap_dots + f.labels
+ciplot02 <- ciplot_imp$zeMap_background + ciplot_imp$zeMap_dots + ciplot_imp$zeMap_text + f.labels
 ```
 
 ```{r grid_ciplot, echo=F, fig.height=12, fig.width=12}
@@ -254,7 +261,7 @@ First, we plot the factor scores for the 10 sessions
 
 ```{r plot_f_sess, echo = FALSE}
 plot.f_sess <- createFactorMap(svd.res$ExPosition.Data$fj) # with t(gt)
-plot.f_sess$zeMap
+plot.f_sess$zeMap + f.labels
 ```
 
 To have a clearer view of the factor scores for the subject x edges, we first compute the mean factor scores for the each network edge.
@@ -262,6 +269,7 @@ To have a clearer view of the factor scores for the subject x edges, we first co
 ```{r mean_fi}
 # Compute means of factor scores for different edges----
 mean.fi <- getMeans(svd.res$ExPosition.Data$fi, gtlabel$subjects_edge_label) # with t(gt)
+colnames(mean.fi) <- sapply(c(1:ncol(mean.fi)), function(x){sprintf("Factor %s",x)})
 
 BootCube.Comm <- Boot4Mean(svd.res$ExPosition.Data$fi,
                            design = gtlabel$subjects_edge_label,
@@ -271,6 +279,7 @@ BootCube.Comm <- Boot4Mean(svd.res$ExPosition.Data$fi,
 
 # Compute means of factor scores for different types of edges
 mean.fi.bw <- getMeans(svd.res$ExPosition.Data$fi, gtlabel$subjects_wb) # with t(gt)
+colnames(mean.fi.bw) <- sapply(c(1:ncol(mean.fi.bw)), function(x){sprintf("Factor %s",x)})
 
 BootCube.Comm.bw <- Boot4Mean(svd.res$ExPosition.Data$fi,
                            design = gtlabel$subjects_wb,
@@ -280,14 +289,14 @@ BootCube.Comm.bw <- Boot4Mean(svd.res$ExPosition.Data$fi,
 ```
 
 Next, we plot the factor scores for the subject x edges (a mess): Dim 1 & 2
-```{r plot_f_edge, echo=FALSE, echo=F, fig.show = 'hide'}
+```{r plot_f_edge, echo=FALSE, fig.show = 'hide'}
 # plot all factor scores
 plot.f_edge <- createFactorMap(mean.fi, axis1 = 1, axis2 = 2,
                                col.points = net.edge.col$oc,
                                text.cex = 2,
                                force = 0.5,
                                title = "All factor scores - colored by subject_x_edge types")
-f_netedge_plot01 <- plot.f_edge$zeMap_background + plot.f_edge$zeMap_dots
+f_netedge_plot01 <- plot.f_edge$zeMap_background + plot.f_edge$zeMap_dots + f.labels
 # plot the significantly contributed factor scores
 plot.f_edge_imp <- createFactorMap(mean.fi, axis1 = 1, axis2 = 2,
                                    col.points = col4ImportantEdg,
@@ -295,43 +304,48 @@ plot.f_edge_imp <- createFactorMap(mean.fi, axis1 = 1, axis2 = 2,
                                    text.cex = 2,
                                    force = 0.5,
                                    title = "Significantly contributed factor scores - colored by subject_x_edge types")
-f_netedge_plot02 <- plot.f_edge_imp$zeMap_background + plot.f_edge_imp$zeMap_dots
-# plot mean factor scores of subject x edge type
-plot.f_bw_imp <- createFactorMap(mean.fi.bw, axis1 = 1, axis2 = 2,
-                                   col.points = net.edge.col$gc[rownames(mean.fi.bw),],
-                                   col.labels = net.edge.col$gc[rownames(mean.fi.bw),],
-                                   text.cex = 2,
-                                   force = 0.5,
-                                   title = "Mean factor scores for subject_x_edge types")
-f_netedge_plot03 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text
+f_netedge_plot02 <- plot.f_edge_imp$zeMap_background + plot.f_edge_imp$zeMap_dots + f.labels
 
-```
-
-```{r grid_f_netedge_plot, echo=F, fig.height=12, fig.width=12}
-gridExtra::grid.arrange(as.grob(f_netedge_plot01), as.grob(f_netedge_plot02),as.grob(f_netedge_plot03),nrow=2,
-                        top = textGrob("Mean factor scores for edges",gp=gpar(fontsize=18,font=3)))
-```
-Note that a network edge with its region edges significantly contribute to the components both positively and negatively results in a significant mean factor score that is close to the origin. Also, a network edge with only few region edges will lead to a small total SS as compared to the total eigenvalues; this type of network edge might not be significant even when being far away from the origin. (This is shown in the chunk named `checkCtr` which is hidden/commented in the .rmd.)
-
-We can also add boostrap intervals for the factor scores
-```{r CI_plot}
-# plot the only significantly contributed factor scores
+# plot only the significant network edges
 plot.f_impedge <- createFactorMap(mean.fi[importantEdg,], axis1 = 1, axis2 = 2,
                                    col.points = col4ImportantEdg[importantEdg,],
                                    col.labels = col4ImportantEdg[importantEdg,],
                                    constraints = plot.f_edge_imp$constraints,
                                    text.cex = 2,
                                    force = 0.5,
-                                   title = "Significantly contributed factor scores with bootstrap CI\n (colored by subject_x_edge types)")
+                                   title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
+f_netedge_plot03 <- plot.f_impedge$zeMap + f.labels
+
+# plot mean factor scores of subject x edge type
+plot.f_bw_imp <- createFactorMap(mean.fi.bw, axis1 = 1, axis2 = 2,
+                                   col.points = net.edge.col$gc[rownames(mean.fi.bw),],
+                                   col.labels = net.edge.col$gc[rownames(mean.fi.bw),],
+                                   text.cex = 3,
+                                   force = 0.5,
+                                   title = "Mean factor scores for subject_x_edge types")
+f_netedge_plot04 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text + f.labels
+
+```
+
+```{r grid_f_netedge_plot, echo=F, fig.height=12, fig.width=12}
+gridExtra::grid.arrange(as.grob(f_netedge_plot01), as.grob(f_netedge_plot02),as.grob(f_netedge_plot03),as.grob(f_netedge_plot04),nrow=2,
+                        top = textGrob("Mean factor scores for edges",gp=gpar(fontsize=18,font=3)))
+```
+Note that a network edge with its region edges significantly contribute to the components both positively and negatively results in a significant mean factor score that is close to the origin. Also, a network edge with only few region edges will lead to a small total SS as compared to the total eigenvalues; this type of network edge might not be significant even when being far away from the origin. (This is shown in the chunk named `checkCtr` which is hidden/commented in the .rmd.)
+
+We can also add boostrap intervals for the factor scores
+```{r CI_plot, echo = FALSE, fig.show='hide', message= FALSE}
+# plot the only significantly contributed factor scores
 # get the bootstrap data for each network edge
-getBoot2plot_edge <- BootCube.Comm$BootCube[names(importantEdg[importantEdg]),c(1,2),]
+getBoot2plot_edge <- BootCube.Comm$BootCube[importantEdg,c(1,2),]
 # plot the CI ellipses
 f_impedge.CI <- MakeCIEllipses(getBoot2plot_edge,
                                  names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
-                                 col = col4ImportantEdg[rownames(getBoot2plot_edge),],
+                                 col = col4ImportantEdg[importantEdg,],
                                  p.level = .95)
 # create plot
-f_CInetedge_plot01 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f_impedge.CI
+f_CInetedge_plot01 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f.labels
+f_CInetedge_plot02 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f_impedge.CI + f.labels
 
 # get the bootstrap data for each type of network edges
 getBoot2plot_edge_bw <- BootCube.Comm.bw$BootCube[,c(1,2),]
@@ -341,7 +355,12 @@ plot.CI.f_bw <- MakeCIEllipses(getBoot2plot_edge_bw,
                                  col = net.edge.col$gc[rownames(getBoot2plot_edge_bw),],
                                  p.level = .95)
 # create plot
-f_CInetedge_plot02 <- plot.f_bw_imp$zeMap + plot.CI.f_bw
+f_CInetedge_plot03 <- plot.f_bw_imp$zeMap + plot.CI.f_bw + f.labels
+```
+
+```{r grid_f_netedgeCI_plot, echo=F, fig.height=12, fig.width=12, message=FALSE}
+gridExtra::grid.arrange(as.grob(f_CInetedge_plot01), as.grob(f_CInetedge_plot02), as.grob(f_CInetedge_plot03),ncol=2,
+                        top = textGrob("Mean factor scores with CIs for significantly contributed edges",gp=gpar(fontsize=18,font=3)))
 ```
 
 
@@ -369,27 +388,27 @@ heats1 <- superheat(fi1_s1_sqmat, y.axis.reverse = T,
                     bottom.label.text.col = textcol$sub01, 
                     title="sub01")
 
-# heats8 <- superheat(fi1_s8_sqmat, y.axis.reverse = T,
-#                     membership.rows =parcel.list$sub08$vox.des$Comm.rcd,
-#                     membership.cols =parcel.list$sub08$vox.des$Comm.rcd,                    
-#                     left.label.col = labelcol$sub08,
-#                     bottom.label.col = labelcol$sub08,
-#                     left.label.size = 0.08,
-#                     bottom.label.size = 0.05,
-#                     extreme.values.na = FALSE,
-#                     heat.lim = c(-.6, .6),
-#                     heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-#                     heat.pal.values = c(0,0.35,0.5,0.65,1),
-#                     left.label.text.size = 3,
-#                     bottom.label.text.size = 2,
-#                     left.label.text.col = textcol$sub08,  
-#                     bottom.label.text.col = textcol$sub08, 
-#                     title="sub08")
+heats8 <- superheat(fi1_s8_sqmat, y.axis.reverse = T,
+                    membership.rows =parcel.list$sub08$vox.des$Comm.rcd,
+                    membership.cols =parcel.list$sub08$vox.des$Comm.rcd,
+                    left.label.col = labelcol$sub08,
+                    bottom.label.col = labelcol$sub08,
+                    left.label.size = 0.08,
+                    bottom.label.size = 0.05,
+                    extreme.values.na = FALSE,
+                    heat.lim = c(-.6, .6),
+                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                    heat.pal.values = c(0,0.35,0.5,0.65,1),
+                    left.label.text.size = 3,
+                    bottom.label.text.size = 2,
+                    left.label.text.col = textcol$sub08,
+                    bottom.label.text.col = textcol$sub08,
+                    title="sub08")
 
 ```
 
 ```{r grid_heat_fi, echo=F, fig.height=8, fig.width=14}
-gridExtra::grid.arrange(as.grob(heats1$plot), #as.grob(heats8$plot), 
+gridExtra::grid.arrange(as.grob(heats1$plot), as.grob(heats8$plot), 
                         ncol=2,
                         top = textGrob("Node x Node Matrix of Factor Score: Dim 1",gp=gpar(fontsize=18,font=3)))
 ```
@@ -418,27 +437,27 @@ heat_sigfi_sub1 <- superheat(fi_sub1_sig_sqmat, y.axis.reverse = T,
                              bottom.label.text.col = textcol$sub01, 
                              title="sub1: significant contribution")
 
-# heat_sigfi_sub8 <- superheat(fi_sub8_sig_sqmat, y.axis.reverse = T,
-#                              membership.rows =parcel.list$sub08$vox.des$Comm.rcd,
-#                              membership.cols =parcel.list$sub08$vox.des$Comm.rcd,                    
-#                              left.label.col = labelcol$sub08,
-#                              bottom.label.col = labelcol$sub08,
-#                              left.label.size = 0.08,
-#                              bottom.label.size = 0.05,
-#                              extreme.values.na = FALSE,
-#                              heat.lim = c(-.6, .6),
-#                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-#                              heat.pal.values = c(0,0.35,0.5,0.65,1),
-#                              left.label.text.size = 3,
-#                              bottom.label.text.size = 2,
-#                              left.label.text.col = textcol$sub08,
-#                              bottom.label.text.col = textcol$sub08, 
-#                              title="sub8: significant contribution")
+heat_sigfi_sub8 <- superheat(fi_sub8_sig_sqmat, y.axis.reverse = T,
+                             membership.rows =parcel.list$sub08$vox.des$Comm.rcd,
+                             membership.cols =parcel.list$sub08$vox.des$Comm.rcd,
+                             left.label.col = labelcol$sub08,
+                             bottom.label.col = labelcol$sub08,
+                             left.label.size = 0.08,
+                             bottom.label.size = 0.05,
+                             extreme.values.na = FALSE,
+                             heat.lim = c(-.6, .6),
+                             heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                             heat.pal.values = c(0,0.35,0.5,0.65,1),
+                             left.label.text.size = 3,
+                             bottom.label.text.size = 2,
+                             left.label.text.col = textcol$sub08,
+                             bottom.label.text.col = textcol$sub08,
+                             title="sub8: significant contribution")
 
 ```
 
 ```{r, grid_heat_sigfi, echo=F, fig.height=8, fig.width=14}
-gridExtra::grid.arrange(as.grob(heat_sigfi_sub1$plot), #as.grob(heat_sigfi_sub8$plot), 
+gridExtra::grid.arrange(as.grob(heat_sigfi_sub1$plot), as.grob(heat_sigfi_sub8$plot), 
                         ncol=2,
                         top = textGrob("Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1",gp=gpar(fontsize=16,font=3)))
 ```
@@ -464,28 +483,28 @@ sm_heat_sigfi_sub1 <- superheat(fi_sub1_sig_sqmat, y.axis.reverse = T,
                                 bottom.label.text.col = textcol$sub01, 
                                 title="Node x Node Matrix of factor scores - sub1")
 
-# sm_heat_sigfi_sub8 <- superheat(fi_sub8_sig_sqmat, y.axis.reverse = T, 
-#                                 smooth.heat = T, smooth.heat.type = "mean",
-#                                 membership.rows =parcel.list$sub08$vox.des$Comm.rcd,
-#                                 membership.cols =parcel.list$sub08$vox.des$Comm.rcd,                    
-#                                 left.label.col = labelcol$sub08,
-#                                 bottom.label.col = labelcol$sub08,
-#                                 left.label.size = 0.08,
-#                                 bottom.label.size = 0.05,
-#                                 extreme.values.na = FALSE,
-#                                 heat.lim = c(-.6, .6),
-#                                 heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-#                                 heat.pal.values = c(0,0.35,0.5,0.65,1),
-#                                 left.label.text.size = 3,
-#                                 bottom.label.text.size = 2,
-#                                 left.label.text.col = textcol$sub08,
-#                                 bottom.label.text.col = textcol$sub08, 
-#                                 title="Node x Node Matrix of factor scores - sub8")
+sm_heat_sigfi_sub8 <- superheat(fi_sub8_sig_sqmat, y.axis.reverse = T,
+                                smooth.heat = T, smooth.heat.type = "mean",
+                                membership.rows =parcel.list$sub08$vox.des$Comm.rcd,
+                                membership.cols =parcel.list$sub08$vox.des$Comm.rcd,
+                                left.label.col = labelcol$sub08,
+                                bottom.label.col = labelcol$sub08,
+                                left.label.size = 0.08,
+                                bottom.label.size = 0.05,
+                                extreme.values.na = FALSE,
+                                heat.lim = c(-.6, .6),
+                                heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                                heat.pal.values = c(0,0.35,0.5,0.65,1),
+                                left.label.text.size = 3,
+                                bottom.label.text.size = 2,
+                                left.label.text.col = textcol$sub08,
+                                bottom.label.text.col = textcol$sub08,
+                                title="Node x Node Matrix of factor scores - sub8")
 
 ```
 
 ```{r, grid_smheat_sigfi, echo=F, fig.height=8, fig.width=14}
-gridExtra::grid.arrange(as.grob(sm_heat_sigfi_sub1$plot), #as.grob(sm_heat_sigfi_sub8$plot), 
+gridExtra::grid.arrange(as.grob(sm_heat_sigfi_sub1$plot), as.grob(sm_heat_sigfi_sub8$plot), 
                         ncol=2,
                         top = textGrob("Smoothed Node x Node Matrix of Factor Score w/ Sig Contribution: Dim 1",gp=gpar(fontsize=16,font=3)))
 ```
